feat!: integrar com api externa