@@ -8,10 +8,8 @@ import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import static org.springframework.http.HttpStatus.BAD_GATEWAY;
-import static org.springframework.http.HttpStatus.BAD_REQUEST;
+import static org.springframework.http.HttpStatus.*;
 
 @RestControllerAdvice
 public class ValidationErrorHandlers {
@@ -28,11 +26,10 @@ public class ValidationErrorHandlers {
                             .detailedMessage(fieldError.getDefaultMessage())
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         return ApiErrorResponse.builder()
                 .message("Failed during validation!")
-                .detailedMessage("Failed during validation!")
                 .details(detalhes).build();
     }
 
@@ -45,11 +42,10 @@ public class ValidationErrorHandlers {
                         .message(error.getMessage())
                         .detailedMessage(error.getMessage())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         return ApiErrorResponse.builder()
                 .message("Failed during validation!")
-                .detailedMessage("Failed during validation!")
                 .details(detalhes).build();
     }
 
@@ -57,7 +53,8 @@ public class ValidationErrorHandlers {
     @ExceptionHandler(GatewayException.class)
     public ApiErrorResponse handleGatewayException(GatewayException exception) {
         return ApiErrorResponse.builder()
-                .message(exception.getMessage())
+                .message("Failed when consuming External Resource!")
+                .detailedMessage(exception.getMessage())
                 .build();
     }
 
@@ -66,6 +63,15 @@ public class ValidationErrorHandlers {
     public ApiErrorResponse handleBusinessException(BusinessException exception) {
         return ApiErrorResponse.builder()
                 .message(exception.getMessage())
+                .build();
+    }
+
+    @ResponseStatus(INTERNAL_SERVER_ERROR)
+    @ExceptionHandler(Exception.class)
+    public ApiErrorResponse handleException(Exception exception) {
+        return ApiErrorResponse.builder()
+                .message("An Unexpected Error Occurred!")
+                .detailedMessage(exception.getMessage())
                 .build();
     }
 }
